--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li>
                         <label class="left-label">Name</label><span class="label-value">Siyu Hu</span></li>
                     <li>
-                        <label class="left-label">Academic Degree</label><span class="label-value">PhD</span></li>
+                        <label class="left-label">Degree</label><span class="label-value">PhD</span></li>
                     <li>
                         <label class="left-label">Graduated from</label><span class="label-value">USTC</span></li>
                     <li>
@@ -45,13 +45,13 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">Cell</label><span class="label-value">+86 15656928957</span></li>
+                        <label class="left-label">Cell</label><span class="label-value">15656928957</span></li>
                     <li>
                         <label class="left-label">Email</label><span class="label-value">hsy19891228@yeah.net</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">https://samhu1989.github.io/index.html</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">github.com/samhu1989</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
