--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简历生成器</title>
+    <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
@@ -18,7 +18,7 @@
             <div class="me">
                 <div class="portrait"></div>
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
+                    <h3>"static/image/wechat.jpg"</h3>
                     <br/>
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
@@ -31,7 +31,7 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">Name</label><span class="label-value">Siyu Hu</span></li>
+                        <label class="left-label">Name</label><span class="label-value">Siyu</span></li>
                     <li>
                         <label class="left-label">Degree</label><span class="label-value">PhD</span></li>
                     <li>
@@ -93,10 +93,10 @@
             </div>
 
             <div class="code info-unit">
-                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">WeChat</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="static/image/wechat.jpg" alt="">
 
                 </div>
             </div>
