--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait"></div>
-                <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>"static/image/wechat.jpg"</h3>
-                    <br/>
-                    <input type="text" id="avatar-url">
-                    <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
+                <div class="portrait">
+                    <img src="static/image/me.jpg" alt="">
                 </div>
                 <h1 id="username" >Siyu Hu</h1>
                 <h4 id="persona-tag" >CV / CG </h4>
@@ -49,7 +45,7 @@
                     <li>
                         <label class="left-label">Email</label><span class="label-value">hsy19891228@yeah.net</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">https://samhu1989.github.io/index.html</span></li>
+                        <label class="left-label">Home</label><span class="label-value">https://samhu1989.github.io/index.html</span></li>
                     <li>
                         <label class="left-label">Github</label><span class="label-value">github.com/samhu1989</span></li>
                 </ul>
@@ -59,15 +55,15 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">C/C++</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
+                        <label class="left-label">Qt</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Javascript</label>
+                        <label class="left-label">Python</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
@@ -100,16 +96,10 @@
 
                 </div>
             </div>
-            <div class="remodal remodal-img" data-remodal-id="weixin-modal">
-                <h3>请输入图片URL地址：</h3>
-                <br/>
-                <input type="text" id="weixin-url">
-                <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-            </div>
         </div>
         <div class="main">
             <div class="education info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">教育经历</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">Education</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
