--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="side">
             <div class="me">
                 <div class="portrait">
-                    <img src="static/image/me.jpg" alt="">
+                    <img src="static/image/me.png" alt="">
                 </div>
                 <h1 id="username" >Siyu Hu</h1>
                 <h4 id="persona-tag" >CV / CG </h4>
@@ -92,7 +92,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">WeChat</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/wechat.jpg" alt="">
+                    <img src="static/image/wechat.png" alt="">
 
                 </div>
             </div>
